--- a/hotels.html
+++ b/hotels.html
@@ -46,7 +46,7 @@
     </header>
     <!-- Header -->
     <!-- Banner -->
-    <section class="site-bnr hotels Retuarants">
+    <section class="site-bnr hotels">
         <div class="container">
             <div class="bnr-inner">
                 <div class="bnr-text">
