--- a/gaming.html
+++ b/gaming.html
@@ -5,8 +5,7 @@
     <title>swisscomparez-gaming </title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
+    <link href="css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/responsive.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css">
@@ -29,7 +28,7 @@
                             <li><a href="hotels.html">Hotels </a></li>
                             <li><a href="retuarants.html">Retuarants</a></li>
                             <li><a href="outdoor.html">Outdoor </a></li>
-                            <li><a href="gaming.html"  class="active"> Gaming</a></li>
+                            <li><a href="gaming.html" class="active"> Gaming</a></li>
                             <li><a href="kontaktieren-sie-uns.html">Kontaktieren Sie uns </a></li>
                         </ul>
                     </div>
@@ -150,7 +149,7 @@
                                     Spielautomaten, Poker und Roulette-Tischen. Das Casino veranstaltet auch regelmäßig
                                     Events und Live-Unterhaltung.
                                 </p>
-                            
+
                             </div>
                         </div>
                         <div class="col-lg-3">
@@ -378,6 +377,7 @@
         </div>
     </div>
     <!-- footer  -->
+    <script src="js/bootstrap.bundle.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
     <script>
         $(document).ready(function (e) {
