--- a/gaming.html
+++ b/gaming.html
@@ -69,7 +69,7 @@
                     <div class="row">
                         <div class="col-lg-3">
                             <div class="jungfrauj-img">
-                                <a href="https://www.casinos.at/casinos/baden">
+                                <a href="https://www.casinos.at/casinos/baden" target="_blank">
                                     <img src="images/Casino-Baden.jpg" alt="j">
                                 </a>
                             </div>
@@ -91,7 +91,7 @@
                         </div>
                         <div class="col-lg-3">
                             <div class="out-btn">
-                                <a href="https://www.casinos.at/casinos/baden">Mehr
+                                <a href="https://www.casinos.at/casinos/baden" target="_blank">Mehr
                                     lesen</a>
                             </div>
                         </div>
@@ -101,7 +101,7 @@
                     <div class="row">
                         <div class="col-lg-3">
                             <div class="jungfrauj-img">
-                                <a href="https://www.swisscasinos.ch/zuerich ">
+                                <a href="https://www.swisscasinos.ch/zuerich " target="_blank">
                                     <img src="images/Casino-Zürich.jpg" alt="j">
                                 </a>
                             </div>
@@ -122,7 +122,7 @@
                         </div>
                         <div class="col-lg-3">
                             <div class="out-btn">
-                                <a href="https://www.swisscasinos.ch/zuerich ">Mehr
+                                <a href="https://www.swisscasinos.ch/zuerich " target="_blank">Mehr
                                     lesen</a>
                             </div>
                         </div>
@@ -133,7 +133,7 @@
                     <div class="row">
                         <div class="col-lg-3">
                             <div class="jungfrauj-img">
-                                <a href="https://grandcasinobasel.com/">
+                                <a href="https://grandcasinobasel.com/" target="_blank">
                                     <img src="images/Grand-Casino-Basel.jpg" alt="j">
                                 </a>
                             </div>
@@ -154,7 +154,7 @@
                         </div>
                         <div class="col-lg-3">
                             <div class="out-btn">
-                                <a href="https://grandcasinobasel.com/">Mehr
+                                <a href="https://grandcasinobasel.com/" target="_blank">Mehr
                                     lesen</a>
                             </div>
                         </div>
@@ -164,7 +164,7 @@
                     <div class="row">
                         <div class="col-lg-3">
                             <div class="jungfrauj-img">
-                                <a href="https://www.casinosbarriere.com/fr/montreux.html">
+                                <a href="https://www.casinosbarriere.com/fr/montreux.html" target="_blank">
                                     <img src="images/Casino-Montreux.jpg" alt="j">
                                 </a>
                             </div>
@@ -185,7 +185,7 @@
                         </div>
                         <div class="col-lg-3">
                             <div class="out-btn">
-                                <a href="https://www.casinosbarriere.com/fr/montreux.html">Mehr
+                                <a href="https://www.casinosbarriere.com/fr/montreux.html" target="_blank">Mehr
                                     lesen</a>
                             </div>
                         </div>
@@ -196,7 +196,7 @@
                     <div class="row">
                         <div class="col-lg-3">
                             <div class="jungfrauj-img">
-                                <a href="https://www.casinosbarriere.com/fr/courrendlin.html">
+                                <a href="https://www.casinosbarriere.com/fr/courrendlin.html" target="_blank">
                                     <img src="images/Casino - Courrendlin.jpg" alt="j">
                                 </a>
                             </div>
@@ -216,7 +216,7 @@
                         </div>
                         <div class="col-lg-3">
                             <div class="out-btn">
-                                <a href="https://www.casinosbarriere.com/fr/courrendlin.html">Mehr
+                                <a href="https://www.casinosbarriere.com/fr/courrendlin.html" target="_blank">Mehr
                                     lesen</a>
                             </div>
                         </div>
@@ -227,7 +227,7 @@
                     <div class="row">
                         <div class="col-lg-3">
                             <div class="jungfrauj-img">
-                                <a href="https://www.casinodavos.ch/">
+                                <a href="https://www.casinodavos.ch/" target="_blank">
                                     <img src="images/casino-davos.jpeg" alt="j">
                                 </a>
                             </div>
@@ -248,7 +248,7 @@
                         </div>
                         <div class="col-lg-3">
                             <div class="out-btn">
-                                <a href="https://www.casinodavos.ch/">Mehr
+                                <a href="https://www.casinodavos.ch/" target="_blank">Mehr
                                     lesen</a>
                             </div>
                         </div>
@@ -259,7 +259,7 @@
                     <div class="row">
                         <div class="col-lg-3">
                             <div class="jungfrauj-img">
-                                <a href="https://casino-interlaken.ch/ ">
+                                <a href="https://casino-interlaken.ch/ " target="_blank">
                                     <img src="images/Casino-Interlaken.jpg" alt="j">
                                 </a>
                             </div>
@@ -280,7 +280,7 @@
                         </div>
                         <div class="col-lg-3">
                             <div class="out-btn">
-                                <a href="https://casino-interlaken.ch/ ">Mehr
+                                <a href="https://casino-interlaken.ch/ " target="_blank">Mehr
                                     lesen</a>
                             </div>
                         </div>
