--- a/outdoor.html
+++ b/outdoor.html
@@ -97,7 +97,7 @@
                     <div class="row">
                         <div class="col-lg-4">
                             <div class="jungfrauj-img">
-                                <a href="https://paragliding-interlaken.ch/de/aktivitaten/paragliding-big-blue-sommer/">
+                                <a href="https://paragliding-interlaken.ch/de/aktivitaten/paragliding-big-blue-sommer/" target="_blank">
                                     <img src="images/Paragliding.jpg" alt="j">
                                 </a>
                             </div>
@@ -115,7 +115,7 @@
                                 </p>
                                 <div class="out-btn">
                                     <a
-                                        href="https://paragliding-interlaken.ch/de/aktivitaten/paragliding-big-blue-sommer/">Mehr
+                                        href="https://paragliding-interlaken.ch/de/aktivitaten/paragliding-big-blue-sommer/" target="_blank">Mehr
                                         lesen</a>
                                 </div>
                             </div>
@@ -127,7 +127,7 @@
                     <div class="row">
                         <div class="col-lg-4">
                             <div class="jungfrauj-img">
-                                <a href="https://www.myswitzerland.com/de-ch/planung/transport-aufenthalt/billette/">
+                                <a href="https://www.myswitzerland.com/de-ch/planung/transport-aufenthalt/billette/" target="_blank">
                                     <img src="images/boat.jpg" alt="j">
                                 </a>
                             </div>
@@ -147,7 +147,7 @@
                                 </p>
                                 <div class="out-btn">
                                     <a
-                                        href="https://www.myswitzerland.com/de-ch/planung/transport-aufenthalt/billette/">Mehr
+                                        href="https://www.myswitzerland.com/de-ch/planung/transport-aufenthalt/billette/" target="_blank">Mehr
                                         lesen</a>
                                 </div>
                             </div>
@@ -158,7 +158,7 @@
                     <div class="row">
                         <div class="col-lg-4">
                             <div class="jungfrauj-img">
-                                <a href="https://www.zermatt.ch/Media/Listen-Touren/Wandertouren ">
+                                <a href="https://www.zermatt.ch/Media/Listen-Touren/Wandertouren " target="_blank">
                                     <img src="images/Hiking.jpg" alt="j">
                                 </a>
                             </div>
@@ -175,7 +175,7 @@
                                     Spaziergängen und anspruchsvollen Wanderungen in den Schweizer Alpen.
                                 </p>
                                 <div class="out-btn">
-                                    <a href="https://www.zermatt.ch/Media/Listen-Touren/Wandertouren ">Mehr
+                                    <a href="https://www.zermatt.ch/Media/Listen-Touren/Wandertouren " target="_blank">Mehr
                                         lesen</a>
                                 </div>
                             </div>
@@ -187,7 +187,7 @@
                     <div class="row">
                         <div class="col-lg-4">
                             <div class="jungfrauj-img">
-                                <a href="https://tessin-canyoning.ch/ ">
+                                <a href="https://tessin-canyoning.ch/ " target="_blank">
                                     <img src="images/Canyoning.jpg" alt="j">
                                 </a>
                             </div>
@@ -203,7 +203,7 @@
                                     Pools für den ultimativen Adrenalinkick.
                                 </p>
                                 <div class="out-btn">
-                                    <a href="https://tessin-canyoning.ch/ ">Mehr
+                                    <a href="https://tessin-canyoning.ch/ " target="_blank">Mehr
                                         lesen</a>
                                 </div>
                             </div>
@@ -215,7 +215,7 @@
                     <div class="row">
                         <div class="col-lg-4">
                             <div class="jungfrauj-img">
-                                <a href="https://verbier4vallees.ch/de ">
+                                <a href="https://verbier4vallees.ch/de " target="_blank">
                                     <img src="images/Skiing.jpg" alt="j">
                                 </a>
                             </div>
@@ -232,7 +232,7 @@
 
                                 </p>
                                 <div class="out-btn">
-                                    <a href="https://verbier4vallees.ch/de ">Mehr
+                                    <a href="https://verbier4vallees.ch/de " target="_blank">Mehr
                                         lesen</a>
                                 </div>
                             </div>
@@ -245,7 +245,7 @@
                         <div class="col-lg-4">
                             <div class="jungfrauj-img">
                                 <a
-                                    href="https://www.glacier3000.ch/en/activities/peak-walk-by-tissot-suspension-bridge ">
+                                    href="https://www.glacier3000.ch/en/activities/peak-walk-by-tissot-suspension-bridge " target="_blank">
                                     <img src="images/Glacier.jpg" alt="j">
                                 </a>
                             </div>
@@ -265,7 +265,7 @@
                                 </p>
                                 <div class="out-btn">
                                     <a
-                                        href="https://www.glacier3000.ch/en/activities/peak-walk-by-tissot-suspension-bridge ">Mehr
+                                        href="https://www.glacier3000.ch/en/activities/peak-walk-by-tissot-suspension-bridge " target="_blank">Mehr
                                         lesen</a>
                                 </div>
                             </div>
@@ -276,7 +276,7 @@
                     <div class="row">
                         <div class="col-lg-4">
                             <div class="jungfrauj-img">
-                                <a href="https://ap-rheinfall.ch/">
+                                <a href="https://ap-rheinfall.ch/" target="_blank">
                                     <img src="images/Adventure1.jpg" alt="j">
                                 </a>
                             </div>
@@ -297,7 +297,7 @@
                                     ein unvergessliches Erlebnis.
                                 </p>
                                 <div class="out-btn">
-                                    <a href="https://ap-rheinfall.ch/">Mehr
+                                    <a href="https://ap-rheinfall.ch/" target="_blank">Mehr
                                         lesen</a>
                                 </div>
                             </div>
