--- a/geschaftsbeding.html
+++ b/geschaftsbeding.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/responsive.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css">
+    <link rel="icon" href="images/fav.png" type="image/x-icon">
 </head>
 
 <body>
