--- a/datenschutzrichtlinien.html
+++ b/datenschutzrichtlinien.html
@@ -27,7 +27,7 @@
                         <ul class="navigation_link">
                             <li><a href="index.html">Startseite </a></li>
                             <li><a href="hotels.html">Hotels </a></li>
-                            <li><a href="retuarants.html">Retuarants</a></li>
+                            <li><a href="restaurants.html">Restaurants</a></li>
                             <li><a href="outdoor.html">Outdoor </a></li>
                             <li><a href="gaming.html"> Gaming</a></li>
                             <li><a href="kontaktieren-sie-uns.html">Kontaktieren Sie uns </a></li>
@@ -181,7 +181,7 @@
                             <ul>
                                 <li><a href="index.html">Startseite </a></li>
                                 <li><a href="hotels.html">Hotels </a></li>
-                                <li><a href="retuarants.html">Retuarants</a></li>
+                                <li><a href="restaurants.html">Restaurants</a></li>
                                 <li><a href="outdoor.html">Outdoor </a></li>
                                 <li><a href="gaming.html"> Gaming</a></li>
                                 <li><a href="kontaktieren-sie-uns.html">Kontaktieren Sie uns </a></li>
