--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                         <ul class="navigation_link">
                             <li><a href="index.html" class="active">Startseite </a></li>
                             <li><a href="hotels.html">Hotels </a></li>
-                            <li><a href="retuarants.html">Retuarants</a></li>
+                            <li><a href="restaurants.html">Restaurants</a></li>
                             <li><a href="outdoor.html">Outdoor </a></li>
                             <li><a href="gaming.html"> Gaming</a></li>
                             <li><a href="kontaktieren-sie-uns.html">Kontaktieren Sie uns </a></li>
@@ -75,11 +75,12 @@
                                 <p>Unvergleichliche Expertise: Unser Team von Reiseenthusiasten und Experten hat die
                                     Schweizer Alpen durchquert, malerische Dörfer erkundet und sich in den reichen
                                     kulturellen Reichtum der Schweiz vertieft. Wir teilen unser Insiderwissen und unsere
-                                    Leidenschaft für dieses beeindruckende Reiseziel gerne mit Ihnen. Umfassende
-                                    Reiseführer: Ob Sie ein Sommerabenteuer in den Bergen, einen Winterurlaub zum
-                                    Skifahren oder einen Städtetrip nach Zürich planen, wir bieten umfassende
-                                    Reiseführer, um Ihnen bei der bestmöglichen Reiseplanung zu helfen.
+                                    Leidenschaft für dieses beeindruckende Reiseziel gerne mit Ihnen.
                                 </p>
+                                <p> Umfassende Reiseführer: Ob Sie ein Sommerabenteuer in den Bergen, einen Winterurlaub
+                                    zum
+                                    Skifahren oder einen Städtetrip nach Zürich planen, wir bieten umfassende
+                                    Reiseführer, um Ihnen bei der bestmöglichen Reiseplanung zu helfen.</p>
                             </div>
                         </div>
                     </div>
@@ -88,6 +89,7 @@
                         <div class="switzerland-text one">
                             <div class="switzerland-wrapper">
                                 <h3>Sorgfältig ausgewählte Empfehlungen</h3>
+                                <p></p>
                                 <p>Wir glauben an Qualität statt Quantität. Von den gemütlichsten Bergchalets bis zu den
                                     besten Schokoladengeschäften der Schweiz treffen wir sorgfältige Auswahl, um
                                     sicherzustellen, dass Ihre Erlebnisse nichts weniger als außergewöhnlich sind.
@@ -202,7 +204,7 @@
                             <ul>
                                 <li><a href="index.html">Startseite </a></li>
                                 <li><a href="hotels.html">Hotels </a></li>
-                                <li><a href="retuarants.html">Retuarants</a></li>
+                                <li><a href="restaurants.html">Restaurants</a></li>
                                 <li><a href="outdoor.html">Outdoor </a></li>
                                 <li><a href="gaming.html"> Gaming</a></li>
                                 <li><a href="kontaktieren-sie-uns.html">Kontaktieren Sie uns </a></li>
