--- a/restaurants.html
+++ b/restaurants.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <title>swisscomparez-retuarants</title>
+    <title>swisscomparez-Restaurants </title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -27,7 +27,7 @@
                         <ul class="navigation_link">
                             <li><a href="index.html">Startseite </a></li>
                             <li><a href="hotels.html">Hotels </a></li>
-                            <li><a href="retuarants.html"  class="active">Retuarants</a></li>
+                            <li><a href="restaurants.html"  class="active">Restaurants </a></li>
                             <li><a href="outdoor.html">Outdoor </a></li>
                             <li><a href="gaming.html"> Gaming</a></li>
                             <li><a href="kontaktieren-sie-uns.html">Kontaktieren Sie uns </a></li>
@@ -44,11 +44,11 @@
     </header>
     <!-- Header -->
     <!-- Banner -->
-    <section class="site-bnr hotels Retuarants">
+    <section class="site-bnr hotels Restaurants ">
         <div class="container">
             <div class="bnr-inner">
                 <div class="bnr-text">
-                    <h1> Retuarants </h1>
+                    <h1> Restaurants  </h1>
                 </div>
             </div>
         </div>
@@ -383,7 +383,7 @@
                             <ul>
                                 <li><a href="index.html">Startseite </a></li>
                                 <li><a href="hotels.html">Hotels </a></li>
-                                <li><a href="retuarants.html">Retuarants</a></li>
+                                <li><a href="Restaurants .html">Restaurants </a></li>
                                 <li><a href="outdoor.html">Outdoor </a></li>
                                 <li><a href="gaming.html"> Gaming</a></li>
                                 <li><a href="kontaktieren-sie-uns.html">Kontaktieren Sie uns </a></li>
