--- a/geschaftsbeding.html
+++ b/geschaftsbeding.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <title>swisscomparez-geschäftsbedingungen</title>
     <meta charset="utf-8">
@@ -26,7 +27,7 @@
                         <ul class="navigation_link">
                             <li><a href="index.html">Startseite </a></li>
                             <li><a href="hotels.html">Hotels </a></li>
-                            <li><a href="retuarants.html">Retuarants</a></li>
+                            <li><a href="restaurants.html">Restaurants</a></li>
                             <li><a href="outdoor.html">Outdoor </a></li>
                             <li><a href="gaming.html"> Gaming</a></li>
                             <li><a href="kontaktieren-sie-uns.html">Kontaktieren Sie uns </a></li>
@@ -198,7 +199,7 @@
                             <ul>
                                 <li><a href="index.html">Startseite </a></li>
                                 <li><a href="hotels.html">Hotels </a></li>
-                                <li><a href="retuarants.html">Retuarants</a></li>
+                                <li><a href="restaurants.html">Restaurants</a></li>
                                 <li><a href="outdoor.html">Outdoor </a></li>
                                 <li><a href="gaming.html"> Gaming</a></li>
                                 <li><a href="kontaktieren-sie-uns.html">Kontaktieren Sie uns </a></li>
