--- a/index.html
+++ b/index.html
@@ -252,6 +252,28 @@
         </div>
     </div>
     <!-- footer  -->
+
+    <!--  -->
+    <div class="wrapper">
+        <h2>COOKIES</h2>
+
+        <div class="data">
+            <p>Diese Website verwendet Cookies</p>
+            <p>Wir verwenden Cookies, um Inhalte und Anzeigen zu personalisieren, Social-Media-Funktionen
+                bereitzustellen und unseren Datenverkehr zu analysieren. Wir geben Informationen über Ihre Nutzung
+                unserer Website auch an unsere Partner für soziale Medien, Werbung und Analysen weiter, die diese
+                möglicherweise mit anderen Informationen kombinieren, die Sie ihnen bereitgestellt haben oder die sie im
+                Rahmen Ihrer Nutzung ihrer Dienste gesammelt haben.</p>
+        </div>
+        <div class="buttons">
+            <button class="button" id="acceptBtn">Accept</button>
+            <button class="button" id="declineBtn">Decline</button>
+        </div>
+    </div>
+
+
+
+
     <script src="js/bootstrap.bundle.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
     <script>
