--- a/index.html
+++ b/index.html
@@ -255,24 +255,20 @@
 
     <!--  -->
     <div class="wrapper">
-        <h2>COOKIES</h2>
-
+        <h2>Diese Website verwendet Cookies</h2>
         <div class="data">
-            <p>Diese Website verwendet Cookies</p>
             <p>Wir verwenden Cookies, um Inhalte und Anzeigen zu personalisieren, Social-Media-Funktionen
                 bereitzustellen und unseren Datenverkehr zu analysieren. Wir geben Informationen über Ihre Nutzung
                 unserer Website auch an unsere Partner für soziale Medien, Werbung und Analysen weiter, die diese
-                möglicherweise mit anderen Informationen kombinieren, die Sie ihnen bereitgestellt haben oder die sie im
-                Rahmen Ihrer Nutzung ihrer Dienste gesammelt haben.</p>
+                möglicherweise mit anderen Informationen kombinieren, die Sie ihnen bereitgestellt haben oder die
+                sie im Rahmen Ihrer Nutzung ihrer Dienste gesammelt haben.
+            </p>
         </div>
         <div class="buttons">
             <button class="button" id="acceptBtn">Accept</button>
             <button class="button" id="declineBtn">Decline</button>
         </div>
     </div>
-
-
-
 
     <script src="js/bootstrap.bundle.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
@@ -295,6 +291,30 @@
         menutoggle.onclick = function () {
             menutoggle.classList.toggle('active')
         }
+    </script>
+    <script>const cookieBox = document.querySelector(".wrapper"),
+            buttons = document.querySelectorAll(".button");
+
+        const executeCodes = () => {
+            //if cookie contains codinglab it will be returned and below of this code will not run
+            if (document.cookie.includes("codinglab")) return;
+            cookieBox.classList.add("show");
+
+            buttons.forEach((button) => {
+                button.addEventListener("click", () => {
+                    cookieBox.classList.remove("show");
+
+                    //if button has acceptBtn id
+                    if (button.id == "acceptBtn") {
+                        //set cookies for 1 month. 60 = 1 min, 60 = 1 hours, 24 = 1 day, 30 = 30 days
+                        document.cookie = "cookieBy= codinglab; max-age=" + 60 * 60 * 24 * 30;
+                    }
+                });
+            });
+        };
+
+        //executeCodes function will be called on webpage load
+        window.addEventListener("load", executeCodes);
     </script>
 </body>
 
