--- a/index.html
+++ b/index.html
@@ -265,8 +265,8 @@
             </p>
         </div>
         <div class="buttons">
-            <button class="button" id="acceptBtn">Accept</button>
-            <button class="button" id="declineBtn">Decline</button>
+            <button class="button" id="acceptBtn">Akzeptieren</button>
+            <button class="button" id="declineBtn">Abfall</button>
         </div>
     </div>
 
