--- a/kontaktieren-sie-uns.html
+++ b/kontaktieren-sie-uns.html
@@ -100,9 +100,9 @@
                 <div class="sozialen ">
                     <a href="">Facebook
                     </a><br>
-                    <a href="">Twitter
+                    <a href="" class="twitter">Twitter
                     </a><br>
-                    <a href="">Instagram </a>
+                    <a href="" class="instagram">Instagram </a>
                 </div>
                 <h5>Kundensupport:
                 </h5>
