--- a/restaurants.html
+++ b/restaurants.html
@@ -383,7 +383,7 @@
                             <ul>
                                 <li><a href="index.html">Startseite </a></li>
                                 <li><a href="hotels.html">Hotels </a></li>
-                                <li><a href="Restaurants .html">Restaurants </a></li>
+                                <li><a href="restaurants.html">Restaurants </a></li>
                                 <li><a href="outdoor.html">Outdoor </a></li>
                                 <li><a href="gaming.html"> Gaming</a></li>
                                 <li><a href="kontaktieren-sie-uns.html">Kontaktieren Sie uns </a></li>
