--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html >
 
 <head>
     <title>swisscomparez</title>
@@ -218,7 +218,7 @@
                                 <li><a href="mailto:info@SwissComparez.ch " class="mail">
                                         info@SwissComparez.ch
                                     </a></li>
-                                <li><a href="tel: +41 (0) 123 456 789" class="number">
+                                <li><a href="tel +41 (0) 123 456 789" class="number">
                                         +41 (0) 123 456 789
                                     </a>
                                 </li>
