--- a/geschaftsbeding.html
+++ b/geschaftsbeding.html
@@ -213,9 +213,8 @@
                                 <li><a href="mailto:info@SwissComparez.ch " class="mail">
                                         info@SwissComparez.ch
                                     </a></li>
-                                <li><a href="tel: +41 (0) 123 456 789 
-                                    " class="number">
-                                        +41 (0) 123 456 789
+                                    <li><a href="tel+41(0)123456789" class="number">
+                                        +41 (0)123456789
                                     </a>
                                 </li>
                                 <li><a href="" class="location">Swiss Comparez
