--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
-<html >
-
+<html>
 <head>
     <title>swisscomparez</title>
     <meta charset="utf-8">
@@ -11,7 +10,6 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css">
     <link rel="icon" href="images/fav.png" type="image/x-icon">
 </head>
-
 <body>
     <!-- Header -->
     <header class="header">
@@ -218,8 +216,8 @@
                                 <li><a href="mailto:info@SwissComparez.ch " class="mail">
                                         info@SwissComparez.ch
                                     </a></li>
-                                <li><a href="tel +41 (0) 123 456 789" class="number">
-                                        +41 (0) 123 456 789
+                                <li><a href="tel+41(0)123456789" class="number">
+                                        +41 (0)123456789
                                     </a>
                                 </li>
                                 <li><a href="" class="location">Swiss Comparez
@@ -317,5 +315,4 @@
         window.addEventListener("load", executeCodes);
     </script>
 </body>
-
 </html>
