--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
+
 <head>
     <title>swisscomparez</title>
     <meta charset="utf-8">
@@ -10,6 +11,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css">
     <link rel="icon" href="images/fav.png" type="image/x-icon">
 </head>
+
 <body>
     <!-- Header -->
     <header class="header">
@@ -315,4 +317,5 @@
         window.addEventListener("load", executeCodes);
     </script>
 </body>
+
 </html>
