--- a/kontaktieren-sie-uns.html
+++ b/kontaktieren-sie-uns.html
@@ -237,7 +237,7 @@
                         <div class="footer-menu contact">
                             <h3>Kontaktdaten</h3>
                             <ul>
-                                <li><a href="mailto:info@SwissComparez.ch " class="mail">
+                                <li><a href="mailtoinfo@SwissComparez.ch " class="mail">
                                         info@SwissComparez.ch
                                     </a></li>
                                     <li><a href="tel+41(0)123456789" class="number">
