--- a/kontaktieren-sie-uns.html
+++ b/kontaktieren-sie-uns.html
@@ -27,10 +27,10 @@
                         <ul class="navigation_link">
                             <li><a href="index.html">Startseite </a></li>
                             <li><a href="hotels.html">Hotels </a></li>
-                           <li><a href="restaurants.html">Restaurants</a></li>
+                            <li><a href="restaurants.html">Restaurants</a></li>
                             <li><a href="outdoor.html">Outdoor </a></li>
                             <li><a href="gaming.html"> Gaming</a></li>
-                            <li><a href="kontaktieren-sie-uns.html"  class="active">Kontaktieren Sie uns </a></li>
+                            <li><a href="kontaktieren-sie-uns.html" class="active">Kontaktieren Sie uns </a></li>
                         </ul>
                     </div>
                     <div class="toggle">
@@ -73,13 +73,12 @@
         <div class="container">
             <div class="kontaktdaten">
                 <h3>Kontaktdaten:</h3>
-                <p>E-Mail : <a href="mailto: info@SwissComparez.ch">info@SwissComparez.ch
+                <p>E-Mail : <a href="mailtoinfo@SwissComparez.ch">info@SwissComparez.ch
                     </a>
                 </p>
-                <p>Telefon : <a href="tel: +41 (0) 123 456 789 
-                    ">+41 (0) 123 456 789
-
-                    </a>
+                <p>Telefon :<a href="tel+41(0)123456789" class="number">
+                    +41 (0)123456789
+                </a>
                 </p>
                 <p>Adresse : <a href="#">Swiss Comparez Alpenstraße 123 Zürich, Schweiz PLZ: 8000
                     </a>
@@ -120,7 +119,7 @@
                 <p>Vielen Dank, dass Sie Swiss Comparez als Ihren zuverlässigen Reisebegleiter für die Erkundung der
                     Schweiz gewählt haben. Wir sind gespannt darauf, Teil Ihrer Reise zu sein und Ihnen dabei zu helfen,
                     unvergessliche Erinnerungen während Ihres Schweizer Abenteuers zu schaffen. </p>
-                
+
                 <h5>Datenschutzerklärung für swisscomparez
                 </h5>
                 <p>Bei swisscomparez, zugänglich über www.swisscomparez.com, ist die Privatsphäre unserer Besucher eine
@@ -226,7 +225,7 @@
                             <ul>
                                 <li><a href="index.html">Startseite </a></li>
                                 <li><a href="hotels.html">Hotels </a></li>
-                               <li><a href="restaurants.html">Restaurants</a></li>
+                                <li><a href="restaurants.html">Restaurants</a></li>
                                 <li><a href="outdoor.html">Outdoor </a></li>
                                 <li><a href="gaming.html"> Gaming</a></li>
                                 <li><a href="kontaktieren-sie-uns.html">Kontaktieren Sie uns </a></li>
@@ -237,12 +236,12 @@
                         <div class="footer-menu contact">
                             <h3>Kontaktdaten</h3>
                             <ul>
-                                <li><a href="mailtoinfo@SwissComparez.ch " class="mail">
+                                <li><a href="mailtoinfo@SwissComparez.ch" class="mail">
                                         info@SwissComparez.ch
                                     </a></li>
-                                    <li><a href="tel+41(0)123456789" class="number">
-                                        +41 (0)123456789
-                                    </a>
+                                <li><a href="tel+41(0)123456789" class="number">
+                                    +41 (0)123456789
+                                </a>
                                 </li>
                                 <li><a href="" class="location">Swiss Comparez
                                         Alpenstraße 123 Zürich, Schweiz PLZ: 8000
