--- a/index.html
+++ b/index.html
@@ -255,18 +255,20 @@
 
     <!--  -->
     <div class="wrapper">
-        <h2>Diese Website verwendet Cookies</h2>
-        <div class="data">
-            <p>Wir verwenden Cookies, um Inhalte und Anzeigen zu personalisieren, Social-Media-Funktionen
-                bereitzustellen und unseren Datenverkehr zu analysieren. Wir geben Informationen über Ihre Nutzung
-                unserer Website auch an unsere Partner für soziale Medien, Werbung und Analysen weiter, die diese
-                möglicherweise mit anderen Informationen kombinieren, die Sie ihnen bereitgestellt haben oder die
-                sie im Rahmen Ihrer Nutzung ihrer Dienste gesammelt haben.
-            </p>
-        </div>
-        <div class="buttons">
-            <button class="button" id="acceptBtn">Akzeptieren</button>
-            <button class="button" id="declineBtn">Abfall</button>
+        <div class="container">
+            <h2>Diese Website verwendet Cookies</h2>
+            <div class="data">
+                <p>Wir verwenden Cookies, um Inhalte und Anzeigen zu personalisieren, Social-Media-Funktionen
+                    bereitzustellen und unseren Datenverkehr zu analysieren. Wir geben Informationen über Ihre Nutzung
+                    unserer Website auch an unsere Partner für soziale Medien, Werbung und Analysen weiter, die diese
+                    möglicherweise mit anderen Informationen kombinieren, die Sie ihnen bereitgestellt haben oder die
+                    sie im Rahmen Ihrer Nutzung ihrer Dienste gesammelt haben.
+                </p>
+            </div>
+            <div class="buttons">
+                <button class="button" id="acceptBtn">Akzeptieren</button>
+                <button class="button" id="declineBtn">Abfall</button>
+            </div>
         </div>
     </div>
 
