--- a/restaurants.html
+++ b/restaurants.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <title>swisscomparez-Restaurants </title>
+    <title>Restaurants </title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="css/bootstrap.min.css" rel="stylesheet">
