--- a/outdoor.html
+++ b/outdoor.html
@@ -25,7 +25,7 @@
                     </div>
                     <div class="site-menu">
                         <ul class="navigation_link">
-                            <li><a href="index.html">Startseite </a></li>
+                            <!-- <li><a href="index.html">Startseite </a></li> -->
                             <li><a href="hotels.html">Hotels </a></li>
                             <li><a href="restaurants.html">Restaurants</a></li>
                             <li><a href="outdoor.html" class="active">Outdoor </a></li>
@@ -345,7 +345,7 @@
                         <div class="footer-menu one">
                             <h3>Speisekarte</h3>
                             <ul>
-                                <li><a href="index.html">Startseite </a></li>
+                                <!-- <li><a href="index.html">Startseite </a></li> -->
                                 <li><a href="hotels.html">Hotels </a></li>
                                 <li><a href="restaurants.html">Restaurants</a></li>
                                 <li><a href="outdoor.html">Outdoor </a></li>
