--- a/kontaktieren-sie-uns.html
+++ b/kontaktieren-sie-uns.html
@@ -28,8 +28,8 @@
                             <!-- <li><a href="index.html">Startseite </a></li> -->
                             <li><a href="hotels.html">Hotels </a></li>
                             <li><a href="restaurants.html">Restaurants</a></li>
-                            <li><a href="outdoor.html">Outdoor </a></li>
-                            <li><a href="gaming.html"> Gaming</a></li>
+                            <li><a href="draussen.html">Draussen </a></li>
+                            <li><a href="spielen.html"> Spielen</a></li>
                             <li><a href="kontaktieren-sie-uns.html" class="active">Kontaktieren Sie uns </a></li>
                         </ul>
                     </div>
@@ -48,8 +48,7 @@
         <div class="container">
             <div class="bnr-inner">
                 <div class="bnr-text">
-                    <h1> Kontaktieren Sie uns </h1>
-
+                    <!-- <h1> Kontaktieren Sie uns </h1> -->
                 </div>
             </div>
         </div>
@@ -77,8 +76,8 @@
                     </a>
                 </p>
                 <p>Telefon :<a href="tel+41(0)123456789" class="number">
-                    +41 (0)123456789
-                </a>
+                        +41 (0)123456789
+                    </a>
                 </p>
                 <p>Adresse : <a href="#">Swiss Comparez Alpenstraße 123 Zürich, Schweiz PLZ: 8000
                     </a>
@@ -226,8 +225,8 @@
                                 <!-- <li><a href="index.html">Startseite </a></li> -->
                                 <li><a href="hotels.html">Hotels </a></li>
                                 <li><a href="restaurants.html">Restaurants</a></li>
-                                <li><a href="outdoor.html">Outdoor </a></li>
-                                <li><a href="gaming.html"> Gaming</a></li>
+                                <li><a href="draussen.html">Draussen </a></li>
+                                <li><a href="spielen.html"> Spielen</a></li>
                                 <li><a href="kontaktieren-sie-uns.html">Kontaktieren Sie uns </a></li>
                             </ul>
                         </div>
@@ -240,8 +239,8 @@
                                         info@SwissComparez.ch
                                     </a></li>
                                 <li><a href="tel+41(0)123456789" class="number">
-                                    +41 (0)123456789
-                                </a>
+                                        +41 (0)123456789
+                                    </a>
                                 </li>
                                 <li><a href="" class="location">Swiss Comparez
                                         Alpenstraße 123 Zürich, Schweiz PLZ: 8000
