--- a/datenschutzrichtlinien.html
+++ b/datenschutzrichtlinien.html
@@ -28,8 +28,8 @@
                             <!-- <li><a href="index.html">Startseite </a></li> -->
                             <li><a href="hotels.html">Hotels </a></li>
                             <li><a href="restaurants.html">Restaurants</a></li>
-                            <li><a href="outdoor.html">Outdoor </a></li>
-                            <li><a href="gaming.html"> Gaming</a></li>
+                            <li><a href="draussen.html">Draussen </a></li>
+                            <li><a href="spielen.html"> Spielen</a></li>
                             <li><a href="kontaktieren-sie-uns.html">Kontaktieren Sie uns </a></li>
                         </ul>
                     </div>
@@ -182,8 +182,8 @@
                                 <!-- <li><a href="index.html">Startseite </a></li> -->
                                 <li><a href="hotels.html">Hotels </a></li>
                                 <li><a href="restaurants.html">Restaurants</a></li>
-                                <li><a href="outdoor.html">Outdoor </a></li>
-                                <li><a href="gaming.html"> Gaming</a></li>
+                                <li><a href="draussen.html">Draussen </a></li>
+                                <li><a href="spielen.html"> Spielen</a></li>
                                 <li><a href="kontaktieren-sie-uns.html">Kontaktieren Sie uns </a></li>
                             </ul>
                         </div>
