--- a/geschaftsbeding.html
+++ b/geschaftsbeding.html
@@ -28,8 +28,8 @@
                             <!-- <li><a href="index.html">Startseite </a></li> -->
                             <li><a href="hotels.html">Hotels </a></li>
                             <li><a href="restaurants.html">Restaurants</a></li>
-                            <li><a href="outdoor.html">Outdoor </a></li>
-                            <li><a href="gaming.html"> Gaming</a></li>
+                            <li><a href="draussen.html">Draussen </a></li>
+                            <li><a href="spielen.html"> Spielen</a></li>
                             <li><a href="kontaktieren-sie-uns.html">Kontaktieren Sie uns </a></li>
                         </ul>
                     </div>
@@ -200,8 +200,8 @@
                                 <!-- <li><a href="index.html">Startseite </a></li> -->
                                 <li><a href="hotels.html">Hotels </a></li>
                                 <li><a href="restaurants.html">Restaurants</a></li>
-                                <li><a href="outdoor.html">Outdoor </a></li>
-                                <li><a href="gaming.html"> Gaming</a></li>
+                                <li><a href="draussen.html">Draussen </a></li>
+                                <li><a href="spielen.html"> Spielen</a></li>
                                 <li><a href="kontaktieren-sie-uns.html">Kontaktieren Sie uns </a></li>
                             </ul>
                         </div>
@@ -213,7 +213,7 @@
                                 <li><a href="mailto:info@SwissComparez.ch " class="mail">
                                         info@SwissComparez.ch
                                     </a></li>
-                                    <li><a href="tel+41(0)123456789" class="number">
+                                <li><a href="tel+41(0)123456789" class="number">
                                         +41 (0)123456789
                                     </a>
                                 </li>
