--- a/restaurants.html
+++ b/restaurants.html
@@ -27,9 +27,9 @@
                         <ul class="navigation_link">
                             <!-- <li><a href="index.html">Startseite </a></li> -->
                             <li><a href="hotels.html">Hotels </a></li>
-                            <li><a href="restaurants.html"  class="active">Restaurants </a></li>
-                            <li><a href="outdoor.html">Outdoor </a></li>
-                            <li><a href="gaming.html"> Gaming</a></li>
+                            <li><a href="restaurants.html" class="active">Restaurants</a></li>
+                            <li><a href="draussen.html">Draussen </a></li>
+                            <li><a href="spielen.html"> Spielen</a></li>
                             <li><a href="kontaktieren-sie-uns.html">Kontaktieren Sie uns </a></li>
                         </ul>
                     </div>
@@ -48,7 +48,7 @@
         <div class="container">
             <div class="bnr-inner">
                 <div class="bnr-text">
-                    <h1> Restaurants  </h1>
+                    <!-- <h1> Restaurants </h1> -->
                 </div>
             </div>
         </div>
@@ -383,9 +383,9 @@
                             <ul>
                                 <!-- <li><a href="index.html">Startseite </a></li> -->
                                 <li><a href="hotels.html">Hotels </a></li>
-                                <li><a href="restaurants.html">Restaurants </a></li>
-                                <li><a href="outdoor.html">Outdoor </a></li>
-                                <li><a href="gaming.html"> Gaming</a></li>
+                                <li><a href="restaurants.html">Restaurants</a></li>
+                                <li><a href="draussen.html">Draussen </a></li>
+                                <li><a href="spielen.html"> Spielen</a></li>
                                 <li><a href="kontaktieren-sie-uns.html">Kontaktieren Sie uns </a></li>
                             </ul>
                         </div>
@@ -397,7 +397,7 @@
                                 <li><a href="mailto:info@SwissComparez.ch " class="mail">
                                         info@SwissComparez.ch
                                     </a></li>
-                                    <li><a href="tel+41(0)123456789" class="number">
+                                <li><a href="tel+41(0)123456789" class="number">
                                         +41 (0)123456789
                                     </a>
                                 </li>
